--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,9 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+node_modules
+node_modules/.package-lock.json
+node_modules/*
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
